--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -273,12 +273,33 @@
 
         </RelativeLayout>
 
+        <EditText
+            android:id="@+id/edt_request_parent_notes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_weight="1"
+            android:background="@drawable/edittext_shadow"
+            android:hint="@string/notes"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:text="@={transfermoney.notes}"
+            android:paddingLeft="@dimen/marign10dp"
+            android:paddingTop="@dimen/marign15dp"
+            android:paddingRight="@dimen/marign10dp"
+            android:paddingBottom="@dimen/marign15dp"
+            android:textColorHint="@color/lightgrey"
+            app:layout_constraintTop_toBottomOf="@+id/relative_transfer_amount" />
+
+
         <RelativeLayout
             android:id="@+id/relative_service_charger"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relative_transfer_amount">
+            app:layout_constraintTop_toBottomOf="@+id/edt_request_parent_notes">
 
             <TextView
                 android:id="@+id/tv_service_charge"
@@ -287,20 +308,29 @@
                 android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign20dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="@string/servicecharge"
+                android:text="@string/transfermode"
                 android:textColor="@color/black"
                 app:layout_constraintHorizontal_chainStyle="spread" />
 
-            <TextView
-                android:id="@+id/tv_service_charge_amount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign10dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign10dp"
-                android:layout_toEndOf="@+id/tv_service_charge"
-                android:paddingTop="@dimen/marign10dp" />
+                <LinearLayout
+                    android:layout_marginStart="@dimen/marign20dp"
+                    android:layout_marginTop="@dimen/marign20dp"
+                    android:layout_below="@+id/tv_service_charge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+
+                    <RadioButton
+                        android:text="IMPS(₹5)"
+                        android:buttonTint="@color/green"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+
+
+
+                </LinearLayout>
+
 
         </RelativeLayout>
 
