--- a/app/src/main/res/layout/alltransaction_itemview.xml
+++ b/app/src/main/res/layout/alltransaction_itemview.xml
@@ -83,7 +83,32 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_all_tramsaction_id" />
 
 
-         
+            <TextView
+                android:id="@+id/tv_all_tramsaction_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marign5dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/status"
+                android:textColor="@color/light_green"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_all_tramsaction_date" />
+
+            <TextView
+                android:id="@+id/tv_all_tramsaction_status_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign5dp"
+                android:layout_marginTop="@dimen/marign5dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@{alltransaction.status}"
+                android:textColor="@color/black"
+                app:layout_constraintLeft_toRightOf="@+id/tv_all_tramsaction_status"
+                app:layout_constraintTop_toBottomOf="@+id/tv_all_tramsaction_date" />
+
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
