--- a/app/src/main/res/layout/activity_cash_deposite.xml
+++ b/app/src/main/res/layout/activity_cash_deposite.xml
@@ -83,7 +83,7 @@
                 android:layout_marginStart="@dimen/margin20dp"
                 android:layout_marginTop="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="@string/available_balance"
+                android:text="@string/available_sp_balance"
                 android:textColor="@color/black"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/carview_header" />
@@ -214,6 +214,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:maxLength="15"
                     android:background="@android:color/transparent"
                     android:hint="@string/bankrefid"
                     android:paddingLeft="@dimen/margin10dp"
